third_party/move/move-compiler-v2/tests/checking-lang-v2.2/lambda/generic_wrapper_abilities.exp

Diagnostics:
error: captured value is missing abilities `copy`
   ┌─ tests/checking-lang-v2.2/lambda/generic_wrapper_abilities.move:26:40
   │
26 │         let f: Func<S> = |x| { x.merge(s) };
   │                                        ^
   │
   = expected function type: `|S|S has copy` (wrapped type of `Func<S>`)
